# Canvas

./: .dockerignore  .editorconfig  .env.example  .env.prod  .gitignore  .prettierrc  DOCKER_DEPLOYMENT.md  ENVIRONMENT.md  README.md  README_zh.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  plan.md
.claude/: settings.local.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  canvas.db  docker-entrypoint.sh  go.mod  go.sum  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run.py  run_worker.py  test_storage_features.py
backend/app/: __init__.py  audit.py  auth.py  background_worker.py  cache.py  celery_app.py  config.py  database.py  db.py  dependencies.py  exceptions.py  k8s_client.py  kubernetes.py  logging_config.py  main.py  models.py  observability.py  schemas.py  tasks.py  websocket_manager.py
backend/app/api/: router.py
backend/app/api/routes/: alert_rules.py  alerts.py  audit.py  auth.py  authz.py  cluster.py  cluster_config.py  configmaps.py  crds.py  cronjobs.py  daemonsets.py  deployments.py  events.py  helm.py  ingresses.py  jobs.py  metrics.py  namespaces.py  networkpolicies.py  nodes.py  notifications.py  pods.py  rbac.py  resources.py  secrets.py  services.py  statefulsets.py  storage.py
backend/app/config/: performance.py
backend/app/core/: __init__.py  auth.py  background_tasks_lock.py  bootstrap.py  config.py  crypto.py  logging.py  rate_limiter.py  request_context.py  security.py
backend/app/models/: __init__.py  alert_event.py  alert_rule.py  alert_status.py  audit_log.py  cluster_config.py  container_metric.py  node_metric.py  notify_config.py  storage_stats.py  user.py
backend/app/routers/: alerts.py  app_rbac.py  audit_logs.py  auth.py  clusters.py  configmaps.py  cronjobs.py  daemonsets.py  deployments.py  deps.py  events.py  hpas.py  ingress.py  ingress_temp.py  ingresses.py  jobs.py  limit_ranges.py  metrics.py  monitoring.py  namespaces.py  network_policies.py  nodes.py  pdbs.py  permissions.py  pods.py  rbac.py  resource_quotas.py  secrets.py  services.py  statefulsets.py  stats.py  storage.py  users.py  websocket.py
backend/app/schemas/: alert_rules.py  audit.py  auth.py  config.py  kubernetes.py  notifications.py  rbac.py  websocket.py
backend/app/scripts/: encrypt_existing.py
backend/app/services/: __init__.py  alert_checker.py  alert_notify.py  alert_rules.py  audit.py  audit_archive.py  auth.py  auth_service.py  cluster_config.py  helm.py  kube_client.py  notify_config.py  rbac_service.py  storage_stats.py
backend/app/services/k8s/: __init__.py  base_operations.py  client_pool.py  config_operations.py  deployment_ops.py  job_operations.py  monitoring_operations.py  namespace_operations.py  network_operations.py  pod_operations.py  policy_operations.py  quota_operations.py  rbac_operations.py  resource_watcher.py  service_operations.py  storage_operations.py  utils.py  workload_operations.py
backend/app/services/resources/: config.py
backend/app/websocket/: __init__.py  k8s_watcher.py  manager.py
backend/app/workers/: scheduler.py
backend/cmd/server/: main.go
backend/config/: settings.production.example.yaml  settings.yaml
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/httpapi/contextkeys/: contextkeys.go
backend/internal/httpapi/handlers/: alerts.go  audit_logs.go  auth.go  clusters.go  common_utils.go  configmaps.go  deployments.go  events.go  jobs.go  k8s_common.go  metrics.go  monitoring.go  namespaces.go  network_policies.go  nodes.go  permissions.go  pods.go  rbac.go  resource_quotas.go  secrets.go  services.go  stats.go  storage.go  system.go  users.go  websocket.go  workloads.go
backend/internal/httpapi/middleware/: auth.go  recovery.go  request_id.go
backend/internal/httpapi/response/: response.go
backend/internal/httpapi/router/: router.go
backend/internal/k8s/: client.go  service.go  time.go
backend/internal/models/: models.go
backend/internal/security/: jwt.go  password.go
docker/mysql/: init.sql
docker/nginx/: nginx.conf
docs/: ARCHITECTURE.md  README.md  cluster-access.md  data-points.md  design-system.md  kuboard-compare.md
frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  README.md  STORAGE_FEATURES.md  components.json  eslint.config.mjs  i18n.ts  middleware.ts  next.config.js  next.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertRuleDialog.tsx  AppLayout.tsx  AppSidebar.tsx  AuthGuard.tsx  BatchOperations.tsx  ClientOnly.tsx  ClusterContextRequired.tsx  ClusterForm.tsx  ClusterSelector.tsx  ConfirmDialog.tsx  ControllerInstaller.tsx  ControllerManager.tsx  ControllerStatus.tsx  DeploymentConfigTab.tsx  DeploymentScalingTab.tsx  DeploymentServicesTab.tsx  DeploymentYamlTab.tsx  ErrorBoundary.tsx  IngressClassForm.tsx  IngressClassManager.tsx  IngressEditor.tsx  IngressForm.tsx  IngressYamlEditor.tsx  MetricsServerInstallDialog.tsx  NetworkPolicyForm.tsx  PageHeader.tsx  QueryProvider.tsx  ResourceList.tsx  ResourceQuotaForm.tsx  (+4 more)
(+252 files in other folders)
