[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvas-backend"
version = "0.1.0"
description = "FastAPI backend for the Canvas Kubernetes dashboard."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Canvas Team" }]
license = { text = "Proprietary" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "kubernetes>=30.0.0",
  "async-lru>=2.0.4",
  "cachetools>=5.3.3",
  "structlog>=24.1.0",
  "tenacity>=9.0.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "anyio>=4.3.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240914",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

